Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.mm
@@ -164,7 +164,6 @@ LocalSampleBufferDisplayLayer::LocalSampleBufferDisplayLayer(RetainPtr<AVSampleB
 
 void LocalSampleBufferDisplayLayer::initialize(bool hideRootLayer, IntSize size, CompletionHandler<void(bool didSucceed)>&& callback)
 {
-    m_sampleBufferDisplayLayer.get().backgroundColor = cachedCGColor(Color::black).get();
     m_sampleBufferDisplayLayer.get().anchorPoint = { .5, .5 };
     m_sampleBufferDisplayLayer.get().needsDisplayOnBoundsChange = YES;
     m_sampleBufferDisplayLayer.get().videoGravity = AVLayerVideoGravityResizeAspectFill;
@@ -172,7 +171,6 @@ void LocalSampleBufferDisplayLayer::initialize(bool hideRootLayer, IntSize size,
     m_rootLayer = adoptNS([[CALayer alloc] init]);
     m_rootLayer.get().hidden = hideRootLayer;
 
-    m_rootLayer.get().backgroundColor = cachedCGColor(Color::black).get();
     m_rootLayer.get().needsDisplayOnBoundsChange = YES;
 
     m_rootLayer.get().bounds = CGRectMake(0, 0, size.width(), size.height());
@@ -241,6 +239,10 @@ void LocalSampleBufferDisplayLayer::updateDisplayMode(bool hideDisplayLayer, boo
         return;
 
     runWithoutAnimations([&] {
+        if (hideDisplayLayer && !hideRootLayer)
+            m_rootLayer.get().backgroundColor = cachedCGColor(Color::black).get();
+        else
+            m_rootLayer.get().backgroundColor = nil;
         m_sampleBufferDisplayLayer.get().hidden = hideDisplayLayer;
         m_rootLayer.get().hidden = hideRootLayer;
     });
